package VacanzaLambda.src.main.java.musicplaylistservice.activity;


public class CreateItineraryActivity {

}
