package VacanzaLambda.src.main.java.musicplaylistservice.activity.requests;


public class UpdateItineraryRequest {
}
